Make search icon appear full on iphone. Fix #173

--- a/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
+++ b/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
@@ -103,6 +103,7 @@
     i {
       font-size: 24px;
       line-height: 1;
+      width: 24px;
     }
 
     &:hover {
